force-app/main/default/objects/BirthdayReminder__c/BirthdayReminder__c.object-meta.xml
<CustomObject>
    <label>Birthday Reminder</label>
    <nameField>
        <displayFormat>BR-{0000}</displayFormat>
        <label>Birthday Reminder Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Birthday Reminders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks birthday reminders sent for contacts</description>
</CustomObject>