force-app/main/default/objects/BirthdayReminder__c/fields/BirthdayDate__c.field-meta.xml
<CustomField>
    <fullName>BirthdayDate__c</fullName>
    <description>The date of the contact's birthday</description>
    <label>Birthday Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>