force-app/main/default/objects/BirthdayReminder__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact record associated with this birthday reminder</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Birthday Reminders</relationshipLabel>
    <relationshipName>BirthdayReminders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>