force-app/main/default/objects/BirthdayReminder__c/fields/ReminderSent__c.field-meta.xml
<CustomField>
    <fullName>ReminderSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the birthday reminder has been sent</description>
    <label>Reminder Sent</label>
    <type>Checkbox</type>
</CustomField>