force-app/main/default/objects/BirthdayReminder__c/fields/SentDatetime__c.field-meta.xml
<CustomField>
    <fullName>SentDatetime__c</fullName>
    <description>Date and time when the birthday reminder was sent</description>
    <label>Sent Datetime</label>
    <type>DateTime</type>
</CustomField>